--- a/sdk/openai/openai/samples/v2-beta/javascript/package.json
+++ b/sdk/openai/openai/samples/v2-beta/javascript/package.json
@@ -31,6 +31,7 @@
     "@azure/openai": "next",
     "dotenv": "latest",
     "openai": "^4.47.2",
-    "@azure/identity": "^4.2.0"
+    "@azure/identity": "^4.2.0",
+    "zod": "^3.23.8"
   }
 }
