--- a/sdk/identity/identity/tests.yml
+++ b/sdk/identity/identity/tests.yml
@@ -7,6 +7,7 @@ extends:
       ServiceDirectory: identity
       TimeoutInMinutes: 120
       PersistOidcToken: true
+      Location: 'westus2'
       CloudConfig:
         Public:
           SubscriptionConfigurations:
