[EngSys] Add legacy packages  ***NO_CI***

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "build:lage": "lage build",
-    "build:pnpm": "pnpm -r --aggregate-output --reporter=append-only build",
-    "build": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
+    "build": "pnpm -r --aggregate-output --reporter=append-only build",
+    "build:pnpm:parallel": "pnpm -r --workspace-concurrency=Infinity --aggregate-output --reporter=append-only build",
     "clean": "pnpm -r run clean",
     "cspell": "cspell --no-progress .",
     "format": "prettier . --write",
