--- a/sdk/communication/communication-messages-rest/package.json
+++ b/sdk/communication/communication-messages-rest/package.json
@@ -2,7 +2,7 @@
   "name": "@azure-rest/communication-messages",
   "sdk-type": "client",
   "author": "Microsoft Corporation",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Azure client library for Azure Communication Messages services",
   "keywords": [
     "node",
@@ -120,6 +120,7 @@
     "productSlugs": [
       "azure",
       "azure-communication-services"
-    ]
+    ],
+    "apiRefLink": "https://learn.microsoft.com/en-us/javascript/api/overview/azure/communication-messages-rest-readme?view=azure-node-latest"
   }
 }
