--- a/sdk/trustedsigning/arm-trustedsigning/package.json
+++ b/sdk/trustedsigning/arm-trustedsigning/package.json
@@ -56,33 +56,33 @@
     ]
   },
   "dependencies": {
-    "@azure/core-util": "^1.9.2",
-    "@azure-rest/core-client": "^2.1.0",
-    "@azure/core-auth": "^1.6.0",
-    "@azure/core-rest-pipeline": "^1.5.0",
-    "@azure/logger": "^1.0.0",
-    "tslib": "^2.6.2",
-    "@azure/core-lro": "^3.1.0",
-    "@azure/abort-controller": "^2.1.2"
+    "@azure/abort-controller": "workspace:*",
+    "@azure/core-util": "workspace:*",
+    "@azure/core-auth": "workspace:*",
+    "@azure/core-lro": "workspace:*",
+    "@azure/core-rest-pipeline": "workspace:*",
+    "@azure/logger": "workspace:*",
+    "@azure-rest/core-client": "workspace:*",
+    "tslib": "catalog:"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "@microsoft/api-extractor": "^7.40.3",
-    "@types/node": "^18.0.0",
-    "eslint": "^8.55.0",
+    "@azure/dev-tool": "workspace:*",
+    "@azure/identity": "workspace:*",
+    "@azure/eslint-plugin-azure-sdk": "workspace:*",
+    "@azure-tools/test-credential": "workspace:*",
+    "@azure-tools/test-recorder": "workspace:*",
+    "@microsoft/api-extractor": "catalog:",
+    "@types/node": "catalog:",
+    "@vitest/browser": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
+    "dotenv": "catalog:",
+    "eslint": "catalog:",
+    "mkdirp": "catalog:",
+    "playwright": "catalog:",
     "rimraf": "catalog:",
-    "mkdirp": "^3.0.1",
-    "typescript": "~5.6.2",
-    "tshy": "^1.11.1",
-    "@azure/identity": "^4.2.1",
-    "@vitest/browser": "^2.0.5",
-    "@vitest/coverage-istanbul": "^2.0.5",
-    "playwright": "^1.41.2",
-    "vitest": "^2.0.5",
-    "@azure-tools/test-credential": "^2.0.0",
-    "@azure-tools/test-recorder": "^4.0.0",
-    "@azure/dev-tool": "^1.0.0",
-    "@azure/eslint-plugin-azure-sdk": "^3.0.0"
+    "tshy": "catalog:",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "scripts": {
     "clean": "rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
@@ -121,44 +121,36 @@
     "./package.json": "./package.json",
     ".": {
       "browser": {
-        "source": "./src/index.ts",
         "types": "./dist/browser/index.d.ts",
         "default": "./dist/browser/index.js"
       },
       "react-native": {
-        "source": "./src/index.ts",
         "types": "./dist/react-native/index.d.ts",
         "default": "./dist/react-native/index.js"
       },
       "import": {
-        "source": "./src/index.ts",
         "types": "./dist/esm/index.d.ts",
         "default": "./dist/esm/index.js"
       },
       "require": {
-        "source": "./src/index.ts",
         "types": "./dist/commonjs/index.d.ts",
         "default": "./dist/commonjs/index.js"
       }
     },
     "./models": {
       "browser": {
-        "source": "./src/models/index.ts",
         "types": "./dist/browser/models/index.d.ts",
         "default": "./dist/browser/models/index.js"
       },
       "react-native": {
-        "source": "./src/models/index.ts",
         "types": "./dist/react-native/models/index.d.ts",
         "default": "./dist/react-native/models/index.js"
       },
       "import": {
-        "source": "./src/models/index.ts",
         "types": "./dist/esm/models/index.d.ts",
         "default": "./dist/esm/models/index.js"
       },
       "require": {
-        "source": "./src/models/index.ts",
         "types": "./dist/commonjs/models/index.d.ts",
         "default": "./dist/commonjs/models/index.js"
       }
