--- a/sdk/attestation/attestation/tsconfig.json
+++ b/sdk/attestation/attestation/tsconfig.json
@@ -14,7 +14,6 @@
     "src/**/*.cts",
     "samples-dev/**/*.ts",
     "test/**/*.ts",
-    "test/utils/env-browser.mts",
-    "test/utils/base64url-browser.mts"
+    "test/**/*.mts"
   ]
 }
