try using double quotes instead of single, does that work?

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -54,7 +54,7 @@ steps:
 
   - template: /eng/common/pipelines/templates/steps/verify-samples.yml
     parameters:
-      ServiceDirectories: $[replace(variables['ChangedServices'], ' ', ',')]
+      ServiceDirectories: $[replace(variables["ChangedServices"], " ", ",")]
 
   - script: |
       npm ci
