--- a/eng/common/pipelines/templates/steps/verify-samples.yml
+++ b/eng/common/pipelines/templates/steps/verify-samples.yml
@@ -15,7 +15,7 @@ steps:
       # ServiceDirectories will be a comma separated list.
       $ServiceDirectories = '${{ coalesce(parameters.ServiceDirectory, parameters.ServiceDirectories) }}'
       $ScanPaths = @()
-      foreach ($ServiceDirectory in $ServiceDirectories.Split(' ')) {
+      foreach ($ServiceDirectory in $ServiceDirectories.Split(',')) {
         $ScanPath = [System.IO.Path]::Combine('$(Build.SourcesDirectory)', 'sdk', $ServiceDirectory)
         Write-Host "Adding $ScanPath to the scanned paths"
         $ScanPaths += $ScanPath
