[EngSys] Add legacy packages  ***NO_CI***

--- a/sdk/appconfiguration/app-configuration/package.json
+++ b/sdk/appconfiguration/app-configuration/package.json
@@ -89,9 +89,9 @@
     "@azure-tools/test-recorder": "workspace:*",
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
-    "@azure/eventgrid": "npm:@azure/eventgrid@~5.8.0",
-    "@azure/identity": "npm:@azure/identity@~4.5.0",
-    "@azure/keyvault-secrets": "npm:@azure/keyvault-secrets@~4.9.0",
+    "@azure/eventgrid": "catalog:internal",
+    "@azure/identity": "catalog:internal",
+    "@azure/keyvault-secrets": "catalog:internal",
     "@microsoft/api-extractor": "catalog:",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
