--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -23,55 +23,17 @@ packages:
   - sdk/test-utils/test-credential
   - sdk/test-utils/test-utils
   - sdk/test-utils/test-utils-vitest
-  - sdk/advisor/arm-advisor
-  - sdk/agrifood/agrifood-farming-rest
-  - sdk/agrifood/arm-agrifood
-  - sdk/ai/ai-inference-rest
-  - sdk/analysisservices/arm-analysisservices
-  - sdk/anomalydetector/ai-anomaly-detector-rest
-  - sdk/apicenter/arm-apicenter
+  - sdk/**/arm-*
+  - sdk/**/*-rest  
   - sdk/apimanagement/api-management-custom-widgets-scaffolder
   - sdk/apimanagement/api-management-custom-widgets-tools
-  - sdk/apimanagement/arm-api-management
-  - sdk/appcomplianceautomation/arm-appcomplianceautomation
   - sdk/appconfiguration/app-configuration
-  - sdk/appconfiguration/arm-appconfiguration
   - sdk/appconfiguration/perf-tests/app-configuration
-  - sdk/appcontainers/arm-appcontainers
-  - sdk/applicationinsights/arm-appinsights
-  - sdk/appplatform/arm-appplatform
-  - sdk/appservice/arm-appservice
-  - sdk/appservice/arm-appservice-profile-2020-09-01-hybrid
-  - sdk/appservice/arm-appservice-rest
-  - sdk/astro/arm-astro
-  - sdk/attestation/arm-attestation
   - sdk/attestation/attestation
-  - sdk/authorization/arm-authorization
-  - sdk/authorization/arm-authorization-profile-2020-09-01-hybrid
-  - sdk/automanage/arm-automanage
-  - sdk/automation/arm-automation
-  - sdk/avs/arm-avs
-  - sdk/azureadexternalidentities/arm-azureadexternalidentities
-  - sdk/azurestack/arm-azurestack
-  - sdk/azurestackhci/arm-azurestackhci
-  - sdk/baremetalinfrastructure/arm-baremetalinfrastructure
-  - sdk/batch/arm-batch
-  - sdk/batch/batch-rest
-  - sdk/billing/arm-billing
-  - sdk/billingbenefits/arm-billingbenefits
-  - sdk/botservice/arm-botservice
-  - sdk/cdn/arm-cdn
-  - sdk/changeanalysis/arm-changeanalysis
-  - sdk/changes/arm-changes
-  - sdk/chaos/arm-chaos
   - sdk/cognitivelanguage/ai-language-conversations  
   - sdk/cognitivelanguage/ai-language-text  
   - sdk/cognitivelanguage/ai-language-textauthoring  
   - sdk/cognitivelanguage/perf-tests/ai-language-text
-  - sdk/cognitiveservices/arm-cognitiveservices
-  - sdk/commerce/arm-commerce
-  - sdk/commerce/arm-commerce-profile-2020-09-01-hybrid
-  - sdk/communication/arm-communication
   - sdk/communication/communication-alpha-ids
   - sdk/communication/communication-call-automation
   - sdk/communication/communication-chat
@@ -79,8 +41,6 @@ packages:
   - sdk/communication/communication-email
   - sdk/communication/communication-identity
   - sdk/communication/communication-job-router
-  - sdk/communication/communication-job-router-rest
-  - sdk/communication/communication-messages-rest
   - sdk/communication/communication-phone-numbers
   - sdk/communication/communication-recipient-verification
   - sdk/communication/communication-rooms
@@ -88,119 +48,30 @@ packages:
   - sdk/communication/communication-sms
   - sdk/communication/communication-tiering
   - sdk/communication/communication-toll-free-verification
-  - sdk/compute/arm-compute
-  - sdk/compute/arm-compute-profile-2020-09-01-hybrid
-  - sdk/compute/arm-compute-rest
-  - sdk/computefleet/arm-computefleet
-  - sdk/confidentialledger/arm-confidentialledger
-  - sdk/confidentialledger/confidential-ledger-rest
-  - sdk/confluent/arm-confluent
-  - sdk/connectedvmware/arm-connectedvmware
-  - sdk/consumption/arm-consumption
-  - sdk/containerservice/arm-containerservice
-  - sdk/containerregistry/arm-containerregistry
   - sdk/containerregistry/container-registry
   - sdk/containerregistry/perf-tests/container-registry
-  - sdk/containerservice/arm-containerservice
-  - sdk/containerservice/arm-containerservice-rest
-  - sdk/containerservice/arm-containerservicefleet
-  - sdk/contentsafety/ai-content-safety-rest
-  - sdk/cosmosdb/arm-cosmosdb
   - sdk/cosmosdb/cosmos
-  - sdk/cosmosforpostgresql/arm-cosmosforpostgresql
-  - sdk/cost-management/arm-costmanagement
-  - sdk/customer-insights/arm-customerinsights
-  - sdk/dashboard/arm-dashboard
-  - sdk/databox/arm-databox
-  - sdk/databoxedge/arm-databoxedge
-  - sdk/databoxedge/arm-databoxedge-profile-2020-09-01-hybrid
-  - sdk/databricks/arm-databricks
-  - sdk/datacatalog/arm-datacatalog
-  - sdk/datadog/arm-datadog
-  - sdk/datafactory/arm-datafactory
-  - sdk/datalake-analytics/arm-datalake-analytics
-  - sdk/datamigration/arm-datamigration
-  - sdk/dataprotection/arm-dataprotection
-  - sdk/defendereasm/arm-defendereasm
-  - sdk/deploymentmanager/arm-deploymentmanager
-  - sdk/desktopvirtualization/arm-desktopvirtualization
-  - sdk/devcenter/arm-devcenter
-  - sdk/devcenter/developer-devcenter-rest
-  - sdk/devhub/arm-devhub
-  - sdk/deviceprovisioningservices/arm-deviceprovisioningservices
-  - sdk/deviceregistry/arm-deviceregistry
-  - sdk/deviceupdate/arm-deviceupdate
-  - sdk/deviceupdate/iot-device-update-rest
-  - sdk/devopsinfrastructure/arm-devopsinfrastructure
-  - sdk/devspaces/arm-devspaces
-  - sdk/devtestlabs/arm-devtestlabs
-  - sdk/digitaltwins/arm-digitaltwins
   - sdk/digitaltwins/digital-twins-core
-  - sdk/dns/arm-dns
-  - sdk/dns/arm-dns-profile-2020-09-01-hybrid
-  - sdk/dnsresolver/arm-dnsresolver
-  - sdk/documentintelligence/ai-document-intelligence-rest
-  - sdk/documenttranslator/ai-document-translator-rest
-  - sdk/domainservices/arm-domainservices
-  - sdk/dynatrace/arm-dynatrace
-  - sdk/easm/defender-easm-rest
-  - sdk/edgezones/arm-edgezones
-  - sdk/education/arm-education
-  - sdk/elastic/arm-elastic
-  - sdk/elasticsans/arm-elasticsans
   - sdk/entra/functions-authentication-events
-  - sdk/eventgrid/arm-eventgrid
   - sdk/eventgrid/eventgrid
   - sdk/eventgrid/eventgrid-namespaces
   - sdk/eventgrid/eventgrid-system-events
   - sdk/eventgrid/perf-tests/eventgrid
-  - sdk/eventhub/arm-eventhub
-  - sdk/eventhub/arm-eventhub-profile-2020-09-01-hybrid
   - sdk/eventhub/event-hubs
   - sdk/eventhub/eventhubs-checkpointstore-blob
   - sdk/eventhub/eventgrid-system-events
   - sdk/eventhub/mock-hub
   - sdk/eventhub/perf-tests/event-hubs
-  - sdk/extendedlocation/arm-extendedlocation
-  - sdk/face/ai-vision-face-rest
-  - sdk/features/arm-features
-  - sdk/fluidrelay/arm-fluidrelay
   - sdk/formrecognizer/ai-form-recognizer
   - sdk/formrecognizer/perf-tests/ai-form-recognizer
-  - sdk/frontdoor/arm-frontdoor
-  - sdk/graphservices/arm-graphservices
-  - sdk/guestconfiguration/arm-guestconfiguration
-  - sdk/hanaonazure/arm-hanaonazure
-  - sdk/hardwaresecuritymodules/arm-hardwaresecuritymodules
-  - sdk/hdinsight/arm-hdinsight
-  - sdk/hdinsight/arm-hdinsightcontainers
-  - sdk/healthbot/arm-healthbot
-  - sdk/healthcareapis/arm-healthcareapis
-  - sdk/healthdataaiservices/arm-healthdataaiservices
   - sdk/healthdataaiservices/azure-health-deidentification
-  - sdk/healthinsights/health-insights-cancerprofiling-rest
-  - sdk/healthinsights/health-insights-clinicalmatching-rest
-  - sdk/healthinsights/health-insights-radiologyinsights-rest
-  - sdk/hybridcompute/arm-hybridcompute
-  - sdk/hybridconnectivity/arm-hybridconnectivity
-  - sdk/hybridcontainerservice/arm-hybridcontainerservice
-  - sdk/hybridkubernetes/arm-hybridkubernetes
-  - sdk/hybridnetwork/arm-hybridnetwork
   - sdk/identity/identity
   - sdk/identity/broker
   - sdk/identity/identity-cache-persistence
   - sdk/identity/identity-vscode
   - sdk/identity/perf-tests/identity
-  - sdk/imagebuilder/arm-imagebuilder
-  - sdk/informatica/arm-informaticadatamanagement
   - sdk/instrumentation/opentelemetry-instrumentation-azure-sdk
   - sdk/iot/iot-modelsrepository
-  - sdk/iotcentral/arm-iotcentral
-  - sdk/iotfirmwaredefense/arm-iotfirmwaredefense
-  - sdk/iothub/arm-iothub
-  - sdk/iothub/arm-iothub-profile-2020-09-01-hybrid
-  - sdk/keyvault/arm-keyvault
-  - sdk/keyvault/arm-keyvault-profile-2020-09-01-hybrid
   - sdk/keyvault/keyvault-admin
   - sdk/keyvault/keyvault-certificates
   - sdk/keyvault/keyvault-common  
@@ -209,47 +80,10 @@ packages:
   - sdk/keyvault/perf-tests/keyvault-certificates
   - sdk/keyvault/perf-tests/keyvault-keys
   - sdk/keyvault/perf-tests/keyvault-secrets 
-  - sdk/kubernetesconfiguration/arm-kubernetesconfiguration
-  - sdk/kusto/arm-kusto
-  - sdk/labservices/arm-labservices
-  - sdk/largeinstance/arm-largeinstance
-  - sdk/liftrqumulo/arm-liftrqumulo
-  - sdk/links/arm-links
-  - sdk/loadtesting/arm-loadtesting
-  - sdk/loadtesting/load-testing-rest
-  - sdk/locks/arm-locks
-  - sdk/locks/arm-locks-profile-2020-09-01-hybrid
-  - sdk/logic/arm-logic
-  - sdk/machinelearning/arm-commitmentplans
-  - sdk/machinelearning/arm-machinelearning
-  - sdk/machinelearning/arm-webservices
-  - sdk/machinelearning/arm-workspaces
-  - sdk/machinelearningcompute/arm-machinelearningcompute
-  - sdk/machinelearningexperimentation/arm-machinelearningexperimentation
-  - sdk/maintenance/arm-maintenance
-  - sdk/managedapplications/arm-managedapplications
-  - sdk/managednetworkfabric/arm-managednetworkfabric
-  - sdk/managementgroups/arm-managementgroups
-  - sdk/managementpartner/arm-managementpartner
-  - sdk/maps/arm-maps
   - sdk/maps/maps-common
-  - sdk/maps/maps-geolocation-rest
-  - sdk/maps/maps-render-rest
-  - sdk/maps/maps-route-rest
-  - sdk/maps/maps-search-rest
-  - sdk/mariadb/arm-mariadb
-  - sdk/marketplaceordering/arm-marketplaceordering
-  - sdk/mediaservices/arm-mediaservices
   - sdk/metricsadvisor/ai-metrics-advisor
   - sdk/metricsadvisor/perf-tests/ai-metrics-advisor
-  - sdk/migrate/arm-migrate
-  - sdk/migrationdiscovery/arm-migrationdiscoverysap
-  - sdk/mixedreality/arm-mixedreality
   - sdk/mixedreality/mixed-reality-authentication
-  - sdk/mobilenetwork/arm-mobilenetwork
-  - sdk/mongocluster/arm-mongocluster
-  - sdk/monitor/arm-monitor
-  - sdk/monitor/arm-monitor-profile-2020-09-01-hybrid
   - sdk/monitor/monitor-ingestion
   - sdk/monitor/monitor-opentelemetry
   - sdk/monitor/monitor-opentelemetry-exporter
@@ -257,97 +91,19 @@ packages:
   - sdk/monitor/perf-tests/monitor-ingestion
   - sdk/monitor/perf-tests/monitor-opentelemetry
   - sdk/monitor/perf-tests/monitor-query
-  - sdk/msi/arm-msi
-  - sdk/mysql/arm-mysql
-  - sdk/mysql/arm-mysql-flexible
-  - sdk/netapp/arm-netapp
-  - sdk/network/arm-network
-  - sdk/network/arm-network-profile-2020-09-01-hybrid
-  - sdk/network/arm-network-rest
-  - sdk/networkanalytics/arm-networkanalytics
-  - sdk/networkcloud/arm-networkcloud
-  - sdk/networkfunction/arm-networkfunction
-  - sdk/newrelicobservability/arm-newrelicobservability
-  - sdk/nginx/arm-nginx
-  - sdk/notificationhubs/arm-notificationhubs
   - sdk/notificationhubs/notification-hubs
-  - sdk/oep/arm-oep
   - sdk/openai/openai
-  - sdk/operationalinsights/arm-operationalinsights
-  - sdk/operationsmanagement/arm-operations
-  - sdk/oracledatabase/arm-oracledatabase
-  - sdk/orbital/arm-orbital
-  - sdk/paloaltonetworksngfw/arm-paloaltonetworksngfw
-  - sdk/peering/arm-peering
-  - sdk/playwrighttesting/arm-playwrighttesting
   - sdk/playwrighttesting/create-microsoft-playwright-testing
   - sdk/playwrighttesting/microsoft-playwright-testing
-  - sdk/policy/arm-policy
-  - sdk/policy/arm-policy-profile-2020-09-01-hybrid
-  - sdk/policyinsights/arm-policyinsights
-  - sdk/postgresql/arm-postgresql
-  - sdk/postgresql/arm-postgresql-flexible
-  - sdk/powerbidedicated/arm-powerbidedicated
-  - sdk/powerbiembedded/arm-powerbiembedded
-  - sdk/privatedns/arm-privatedns
-  - sdk/purview/arm-purview
-  - sdk/purview/purview-administration-rest
-  - sdk/purview/purview-catalog-rest
-  - sdk/purview/purview-datamap-rest
-  - sdk/purview/purview-scanning-rest
-  - sdk/purview/purview-sharing-rest
-  - sdk/purview/purview-workflow-rest
-  - sdk/quantum/arm-quantum
   - sdk/quantum/quantum-jobs
-  - sdk/quota/arm-quota
-  - sdk/recoveryservices/arm-recoveryservices
-  - sdk/recoveryservicesbackup/arm-recoveryservicesbackup
-  - sdk/recoveryservicesdatareplication/arm-recoveryservicesdatareplication
-  - sdk/recoveryservicessiterecovery/arm-recoveryservicessiterecovery
-  - sdk/redhatopenshift/arm-redhatopenshift
-  - sdk/redis/arm-rediscache
-  - sdk/redisenterprise/arm-redisenterprisecache
-  - sdk/relay/arm-relay
   - sdk/remoterendering/mixed-reality-remote-rendering
-  - sdk/reservations/arm-reservations
-  - sdk/resourceconnector/arm-resourceconnector
-  - sdk/resourcegraph/arm-resourcegraph
-  - sdk/resourcehealth/arm-resourcehealth
-  - sdk/resourcemover/arm-resourcemover
-  - sdk/resources/arm-resources
-  - sdk/resources/arm-resources-profile-2020-09-01-hybrid
-  - sdk/resources-subscriptions/arm-resources-subscriptions
-  - sdk/resourcesdeploymentstacks/arm-resourcesdeploymentstacks
   - sdk/schemaregistry/schema-registry
   - sdk/schemaregistry/schema-registry-avro
   - sdk/schemaregistry/schema-registry-json
-  - sdk/scvmm/arm-scvmm
-  - sdk/search/arm-search
   - sdk/search/perf-tests/search-documents
   - sdk/search/search-documents
-  - sdk/security/arm-security
-  - sdk/securitydevops/arm-securitydevops
-  - sdk/securityinsight/arm-securityinsight
-  - sdk/selfhelp/arm-selfhelp
-  - sdk/serialconsole/arm-serialconsole
-  - sdk/service-map/arm-servicemap
-  - sdk/servicebus/arm-servicebus
   - sdk/servicebus/perf-tests/service-bus
   - sdk/servicebus/service-bus
-  - sdk/servicefabric/arm-servicefabric
-  - sdk/servicefabric/arm-servicefabric-rest
-  - sdk/servicefabricmanagedclusters/arm-servicefabricmanagedclusters
-  - sdk/servicefabricmesh/arm-servicefabricmesh
-  - sdk/servicelinker/arm-servicelinker
-  - sdk/servicenetworking/arm-servicenetworking
-  - sdk/signalr/arm-signalr
-  - sdk/sphere/arm-sphere
-  - sdk/springappdiscovery/arm-springappdiscovery
-  - sdk/sql/arm-sql
-  - sdk/sqlvirtualmachine/arm-sqlvirtualmachine
-  - sdk/standbypool/arm-standbypool
-  - sdk/storage/arm-storage
-  - sdk/storage/arm-storage-profile-2020-09-01-hybrid
   - sdk/storage/perf-tests/storage-blob
   - sdk/storage/perf-tests/storage-file-datalake
   - sdk/storage/perf-tests/storage-file-share
@@ -357,20 +113,7 @@ packages:
   - sdk/storage/storage-file-share
   - sdk/storage/storage-internal-avro
   - sdk/storage/storage-queue
-  - sdk/storageactions/arm-storageactions
-  - sdk/storagecache/arm-storagecache
-  - sdk/storageimportexport/arm-storageimportexport
-  - sdk/storagemover/arm-storagemover
-  - sdk/storagesync/arm-storagesync
-  - sdk/storsimple1200series/arm-storsimple1200series
-  - sdk/storsimple8000series/arm-storsimple8000series
-  - sdk/streamanalytics/arm-streamanalytics
-  - sdk/subscription/arm-subscription
-  - sdk/subscription/arm-subscription-profile-2020-09-01-hybrid
-  - sdk/support/arm-support
-  - sdk/synapse/arm-synapse
   - sdk/synapse/synapse-access-control
-  - sdk/synapse/synapse-access-control-rest
   - sdk/synapse/synapse-artifacts
   - sdk/synapse/synapse-managed-private-endpoints
   - sdk/synapse/synapse-monitoring
@@ -379,25 +122,12 @@ packages:
   - sdk/tables/perf-tests/data-tables
   - sdk/template/template
   - sdk/template/template-dpg
-  - sdk/templatespecs/arm-templatespecs
   - sdk/textanalytics/ai-text-analytics
   - sdk/textanalytics/perf-tests/ai-text-analytics
-  - sdk/timeseriesinsights/arm-timeseriesinsights
-  - sdk/trafficmanager/arm-trafficmanager
-  - sdk/translation/ai-translation-document-rest
-  - sdk/translation/ai-translation-text-rest
-  - sdk/trustedsigning/arm-trustedsigning
-  - sdk/vision/ai-vision-image-analysis-rest
-  - sdk/visualstudio/arm-visualstudio
-  - sdk/vmwarecloudsimple/arm-vmwarecloudsimple
-  - sdk/voiceservices/arm-voiceservices
-  - sdk/web-pubsub/arm-webpubsub
   - sdk/web-pubsub/web-pubsub
   - sdk/web-pubsub/web-pubsub-client
   - sdk/web-pubsub/web-pubsub-client-protobuf
   - sdk/web-pubsub/web-pubsub-express
-  - sdk/workloads/arm-workloads
-  - sdk/workloads/arm-workloadssapvirtualinstance
 
 catalog:
   '@microsoft/api-extractor': ^7.47.7
@@ -469,3 +199,8 @@ catalogs:
     '@azure-tools/test-credential': ^1.0.0
   test-recorderV3:
     '@azure-tools/test-recorder': ^3.0.0
+  internal:
+    '@azure/eventgrid': ^5.8.0
+    '@azure/identity': ^4.5.0
+    '@azure/keyvault-keys': ^4.8.0
+    '@azure/keyvault-secrets': ^4.9.0
