--- a/sdk/fabric/arm-fabric/package.json
+++ b/sdk/fabric/arm-fabric/package.json
@@ -56,35 +56,32 @@
     ]
   },
   "dependencies": {
-    "@azure/core-util": "^1.9.2",
-    "@azure-rest/core-client": "^2.1.0",
-    "@azure/core-auth": "^1.6.0",
-    "@azure/core-rest-pipeline": "^1.5.0",
-    "@azure/logger": "^1.0.0",
-    "tslib": "^2.6.2",
-    "@azure/core-lro": "^3.0.0",
-    "@azure/abort-controller": "^2.1.2",
-    "@azure/core-paging": "^1.5.0"
+    "@azure/abort-controller": "workspace:*",
+    "@azure/core-auth": "workspace:*",
+    "@azure/core-rest-pipeline": "workspace:*",
+    "@azure/logger": "workspace:*",
+    "@azure/core-lro": "workspace:*",
+    "@azure/core-paging": "workspace:*",
+    "@azure/core-util": "workspace:*",
+    "@azure-rest/core-client": "workspace:*",
+    "tslib": "catalog:"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
-    "@microsoft/api-extractor": "^7.40.3",
-    "@types/node": "^18.0.0",
-    "eslint": "^8.55.0",
-    "prettier": "^3.2.5",
+    "@azure/dev-tool": "workspace:*",
+    "@azure/eslint-plugin-azure-sdk": "workspace:*",
+    "@azure-tools/test-credential": "workspace:*",
+    "@azure-tools/test-recorder": "workspace:*",
+    "@microsoft/api-extractor": "catalog:",
+    "@types/node": "catalog:",
+    "@vitest/browser": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
+    "dotenv": "catalog:",
+    "eslint": "catalog:",
+    "mkdirp": "catalog:",
+    "playwright": "catalog:",
     "rimraf": "catalog:",
-    "mkdirp": "^3.0.1",
-    "typescript": "~5.5.3",
-    "tshy": "^1.11.1",
-    "@azure/identity": "^4.2.1",
-    "@vitest/browser": "^2.0.5",
-    "@vitest/coverage-istanbul": "^2.0.5",
-    "playwright": "^1.41.2",
-    "vitest": "^2.0.5",
-    "@azure-tools/test-credential": "^2.0.0",
-    "@azure-tools/test-recorder": "^4.0.0",
-    "@azure/dev-tool": "^1.0.0",
-    "@azure/eslint-plugin-azure-sdk": "^3.0.0"
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "scripts": {
     "clean": "rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
@@ -106,10 +103,10 @@
     "generate:client": "echo skipped",
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
-    "build:test": "npm run clean && tshy && dev-tool run build-test",
-    "build": "npm run clean && tshy && mkdirp ./review && dev-tool run extract-api",
-    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
+    "build:test": "npm run clean && dev-tool run build-package  && dev-tool run build-test",
+    "build": "npm run clean && dev-tool run build-package  && mkdirp ./review && dev-tool run extract-api",
+    "test:node": "npm run clean && dev-tool run build-package  && npm run unit-test:node && npm run integration-test:node",
+    "test": "npm run clean && dev-tool run build-package  && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
   },
   "//sampleConfiguration": {
     "productName": "@azure/arm-fabric",
@@ -123,44 +120,36 @@
     "./package.json": "./package.json",
     ".": {
       "browser": {
-        "source": "./src/index.ts",
         "types": "./dist/browser/index.d.ts",
         "default": "./dist/browser/index.js"
       },
       "react-native": {
-        "source": "./src/index.ts",
         "types": "./dist/react-native/index.d.ts",
         "default": "./dist/react-native/index.js"
       },
       "import": {
-        "source": "./src/index.ts",
         "types": "./dist/esm/index.d.ts",
         "default": "./dist/esm/index.js"
       },
       "require": {
-        "source": "./src/index.ts",
         "types": "./dist/commonjs/index.d.ts",
         "default": "./dist/commonjs/index.js"
       }
     },
     "./models": {
       "browser": {
-        "source": "./src/models/index.ts",
         "types": "./dist/browser/models/index.d.ts",
         "default": "./dist/browser/models/index.js"
       },
       "react-native": {
-        "source": "./src/models/index.ts",
         "types": "./dist/react-native/models/index.d.ts",
         "default": "./dist/react-native/models/index.js"
       },
       "import": {
-        "source": "./src/models/index.ts",
         "types": "./dist/esm/models/index.d.ts",
         "default": "./dist/esm/models/index.js"
       },
       "require": {
-        "source": "./src/models/index.ts",
         "types": "./dist/commonjs/models/index.d.ts",
         "default": "./dist/commonjs/models/index.js"
       }
