--- a/sdk/communication/communication-messages-rest/package.json
+++ b/sdk/communication/communication-messages-rest/package.json
@@ -2,7 +2,7 @@
   "name": "@azure-rest/communication-messages",
   "sdk-type": "client",
   "author": "Microsoft Corporation",
-  "version": "1.1.0-beta.1",
+  "version": "2.0.0",
   "description": "Azure client library for Azure Communication Messages services",
   "keywords": [
     "node",
@@ -61,9 +61,9 @@
   "sideEffects": false,
   "autoPublish": false,
   "dependencies": {
-    "@azure-rest/core-client": "^1.1.6",
+    "@azure-rest/core-client": "^1.4.0",
     "@azure/communication-common": "^2.2.0",
-    "@azure/core-auth": "^1.3.0",
+    "@azure/core-auth": "^1.6.0",
     "@azure/core-paging": "^1.5.0",
     "@azure/core-rest-pipeline": "^1.12.0",
     "@azure/core-util": "^1.7.0",
@@ -120,6 +120,7 @@
     "productSlugs": [
       "azure",
       "azure-communication-services"
-    ]
+    ],
+    "apiRefLink": "https://learn.microsoft.com/javascript/api/overview/azure/communication-messages-rest-readme?view=azure-node-latest"
   }
 }
