--- a/sdk/iotoperations/arm-iotoperations/package.json
+++ b/sdk/iotoperations/arm-iotoperations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/arm-iotoperations",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "A generated SDK for IoTOperationsClient.",
   "engines": {
     "node": ">=18.0.0"
