--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -74,6 +74,25 @@ jobs:
           MatrixConfigs: ${{ parameters.MatrixConfigs }}
           MatrixFilters: ${{ parameters.MatrixFilters }}
           MatrixReplace: ${{ parameters.MatrixReplace }}
+          PreGenerationSteps:
+            - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
+              parameters:
+                ServiceDirectory: ${{parameters.ServiceDirectory}}
+
+            - template: /eng/pipelines/templates/steps/set-artifact-packages.yml
+              parameters:
+                PackageInfo: $(Build.ArtifactStagingDirectory)/PackageInfo
+                Artifacts: ${{ parameters.Artifacts }}
+
+            - task: Powershell@2
+              inputs:
+                pwsh: true
+                filePath: eng/scripts/distribute-packages-to-matrix.ps1
+                arguments: >-
+                  -PackageInfoFolder "$(Build.ArtifactStagingDirectory)/PackageInfo"
+                  -PlatformMatrix "${{ parameters.MatrixConfigs[0].Path }}"
+              displayName: 'Distribute Packages to Matrix'
+              condition: and(eq(variables['Build.Reason'], 'PullRequest'), eq('${{ parameters.ServiceDirectory }}','auto'))
           CloudConfig:
             Cloud: Public
           AdditionalParameters:
