--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -74,7 +74,7 @@ jobs:
           MatrixConfigs: ${{ parameters.MatrixConfigs }}
           MatrixFilters: ${{ parameters.MatrixFilters }}
           MatrixReplace: ${{ parameters.MatrixReplace }}
-          SparseCheckoutPaths: [ "sdk/" ]
+          SparseCheckoutPaths: [ "sdk/", ".vscode"]
           PreGenerationSteps:
             - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
               parameters:
