Apply suggestions from code review
Co-authored-by: Ben Broderick Phillips <bebroder@microsoft.com>

--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -54,7 +54,7 @@ steps:
 
   - template: /eng/common/pipelines/templates/steps/verify-samples.yml
     parameters:
-      ServiceDirectories: $(CChangedServices)
+      ServiceDirectories: $(ChangedServicesCsv)
 
   - script: |
       npm ci
