ensure we pass servicedirectory to the test job. resolve the issue with resolving the changed services

--- a/eng/pipelines/templates/steps/set-artifact-packages.yml
+++ b/eng/pipelines/templates/steps/set-artifact-packages.yml
@@ -38,8 +38,7 @@ steps:
 
       $packageSet = "$(ArtifactPackageNames)" -split ","
 
-      $changedServicesArray = $packageProperties | Foreach-Object { Get-Content -Raw -Path $_.FullName | ConvertFrom-Json } `
-        | Where-Object { $packageSet -contains $_.ArtifactName }
+      $changedServicesArray = $packageProperties | Where-Object { $packageSet -contains $_.ArtifactName }
         | ForEach-Object { $_.ServiceDirectory } | Get-Unique
 
       $changedServices = $changedServicesArray -join " "
