--- a/sdk/automanage/arm-automanage/package.json
+++ b/sdk/automanage/arm-automanage/package.json
@@ -19,7 +19,8 @@
     "azure",
     "typescript",
     "browser",
-    "isomorphic"
+    "isomorphic",
+    "cloud"
   ],
   "license": "MIT",
   "main": "./dist/index.js",
@@ -29,25 +30,18 @@
     "@azure-tools/test-credential": "catalog:test-credentialV1",
     "@azure-tools/test-recorder": "catalog:test-recorderV3",
     "@azure/dev-tool": "workspace:*",
-    "@azure/identity": "workspace:*",
-    "@microsoft/api-extractor": "catalog:",
+    "@azure/identity": "catalog:internal",
     "@types/chai": "catalog:legacy",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "chai": "catalog:legacy",
     "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
-    "mkdirp": "catalog:legacy",
     "mocha": "catalog:legacy",
-    "rimraf": "catalog:",
-    "ts-node": "catalog:legacy",
     "typescript": "catalog:",
     "uglify-js": "catalog:legacy"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Azure/azure-sdk-for-js.git"
-  },
+  "repository": "github:Azure/azure-sdk-for-js",
   "bugs": {
     "url": "https://github.com/Azure/azure-sdk-for-js/issues"
   },
@@ -60,7 +54,6 @@
     "dist-esm/**/*.js.map",
     "dist-esm/**/*.d.ts",
     "dist-esm/**/*.d.ts.map",
-    "src/**/*.ts",
     "README.md",
     "LICENSE",
     "tsconfig.json",
