--- a/sdk/iotoperations/arm-iotoperations/tsconfig.json
+++ b/sdk/iotoperations/arm-iotoperations/tsconfig.json
@@ -6,9 +6,7 @@
     "rootDir": ".",
     "skipLibCheck": true,
     "paths": {
-      "@azure/arm-iotoperations": [
-        "./src/index"
-      ]
+      "@azure/arm-iotoperations": ["./src/index"]
     }
   },
   "include": [
