--- a/sdk/kubernetesruntime/arm-containerorchestratorruntime/samples/v1-beta/typescript/package.json
+++ b/sdk/kubernetesruntime/arm-containerorchestratorruntime/samples/v1-beta/typescript/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "@azure-samples/arm-containerorchestratorruntime-js",
+  "name": "@azure-samples/arm-containerorchestratorruntime-ts-beta",
   "private": true,
   "version": "1.0.0",
-  "description": "@azure/arm-containerorchestratorruntime client library samples for JavaScript",
+  "description": "@azure/arm-containerorchestratorruntime client library samples for TypeScript (Beta)",
   "engines": {
     "node": ">=18.0.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "prebuild": "rimraf dist/"
   },
   "repository": {
     "type": "git",
@@ -26,8 +30,13 @@
   },
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/kubernetesruntime/arm-containerorchestratorruntime",
   "dependencies": {
-    "@azure/arm-containerorchestratorruntime": "latest",
+    "@azure/arm-containerorchestratorruntime": "next",
     "dotenv": "latest",
     "@azure/identity": "^4.2.1"
+  },
+  "devDependencies": {
+    "@types/node": "^18.0.0",
+    "typescript": "~5.6.2",
+    "rimraf": "latest"
   }
 }
