--- a/sdk/healthdataaiservices/arm-healthdataaiservices/package.json
+++ b/sdk/healthdataaiservices/arm-healthdataaiservices/package.json
@@ -73,7 +73,7 @@
     "@azure/core-util": "workspace:*",
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
-    "@azure/identity": "catelog:internal",
+    "@azure/identity": "catalog:internal",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
