--- a/sdk/dns/arm-dns/package.json
+++ b/sdk/dns/arm-dns/package.json
@@ -38,6 +38,7 @@
     "@types/node": "catalog:",
     "chai": "catalog:legacy",
     "cross-env": "catalog:legacy",
+    "dotenv": "catalog:",
     "mocha": "catalog:legacy",
     "typescript": "catalog:"
   },
