--- a/sdk/healthinsights/health-insights-radiologyinsights-rest/package.json
+++ b/sdk/healthinsights/health-insights-radiologyinsights-rest/package.json
@@ -72,6 +72,7 @@
   "devDependencies": {
     "@azure-tools/test-credential": "catalog:test-credentialV1",
     "@azure-tools/test-recorder": "catalog:test-recorderV3",
+    "@azure/core-client": "workspace:*",
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "catalog:internal",
