--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -75,23 +75,19 @@ jobs:
           MatrixFilters: ${{ parameters.MatrixFilters }}
           MatrixReplace: ${{ parameters.MatrixReplace }}
           SparseCheckoutPaths: [ "sdk/", ".vscode"]
-          PreGenerationSteps:
-            - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
-              parameters:
-                ServiceDirectory: ${{parameters.ServiceDirectory}}
-
-            - task: Powershell@2
-              inputs:
-                pwsh: true
-                filePath: eng/scripts/distribute-packages-to-matrix.ps1
-                arguments: >-
-                  -PackageInfoFolder "$(Build.ArtifactStagingDirectory)/PackageInfo"
-                  -PlatformMatrix "${{ parameters.MatrixConfigs[0].Path }}"
-              displayName: 'Distribute Packages to Matrix'
-              condition: and(eq(variables['Build.Reason'], 'PullRequest'), eq('${{ parameters.ServiceDirectory }}','auto'))
           CloudConfig:
             Cloud: Public
           AdditionalParameters:
             ServiceDirectory: ${{ parameters.ServiceDirectory }}
             Artifacts: ${{ parameters.Artifacts }}
             TestProxy: ${{ parameters.TestProxy }}
+          ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), eq(parameters.ServiceDirectory, 'auto')) }}:
+            PreGenerationSteps:
+              - template: /eng/common/pipelines/templates/steps/save-package-properties.yml
+                parameters:
+                  ServiceDirectory: ${{parameters.ServiceDirectory}}
+              - template: /eng/pipelines/templates/steps/set-artifact-packages.yml
+                parameters:
+                  PackageInfo: $(Build.ArtifactStagingDirectory)/PackageInfo
+                  Artifacts: ${{ parameters.Artifacts }}
+            PostGenerationScript: $(Build.SourcesDirectory)/eng/scripts/distribute-packages-to-matrix.ps1
