we need PostGenerationScript to be optional

--- a/eng/common/pipelines/templates/jobs/generate-job-matrix.yml
+++ b/eng/common/pipelines/templates/jobs/generate-job-matrix.yml
@@ -44,6 +44,7 @@ parameters:
   default: []
 - name: PostGenerationScript
   type: string
+  default: ''
 # Mappings to OS name required at template compile time by 1es pipeline templates
 - name: Pools
   type: object
