--- a/sdk/appconfiguration/app-configuration/package.json
+++ b/sdk/appconfiguration/app-configuration/package.json
@@ -92,13 +92,12 @@
     "@azure/eventgrid": "catalog:internal",
     "@azure/identity": "catalog:internal",
     "@azure/keyvault-secrets": "catalog:internal",
-    "@microsoft/api-extractor": "catalog:",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
     "dotenv": "catalog:",
     "eslint": "catalog:",
-    "nock": "^13.5.4",
+    "nock": "catalog:legacy",
     "playwright": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
