--- a/sdk/cognitivelanguage/ai-language-text/package.json
+++ b/sdk/cognitivelanguage/ai-language-text/package.json
@@ -107,15 +107,15 @@
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "catalog:internal",
-    "@azure/storage-blob": "^12.23.0-beta.1",
+    "@azure/storage-blob": "workspace:*",
     "@types/chai": "catalog:legacy",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-as-promised": "catalog:legacy",
     "@types/decompress": "^4.0.0",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "@types/sinon": "catalog:legacy",
     "chai": "catalog:legacy",
-    "chai-as-promised": "^7.1.1",
+    "chai-as-promised": "catalog:legacy",
     "cross-env": "catalog:legacy",
     "decompress": "^4.0.0",
     "dotenv": "catalog:",
