--- a/sdk/communication/communication-rooms/package.json
+++ b/sdk/communication/communication-rooms/package.json
@@ -37,9 +37,8 @@
     "@azure-tools/test-credential": "catalog:test-credentialV1",
     "@azure-tools/test-recorder": "catalog:test-recorderV3",
     "@azure-tools/test-utils": "workspace:*",
-    "@azure/communication-identity": "^1.1.0-beta.2",
+    "@azure/communication-identity": "workspace:*",
     "@azure/dev-tool": "workspace:*",
-    "@microsoft/api-extractor": "catalog:",
     "@types/chai": "~4.3.1",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
