--- a/sdk/eventhub/event-hubs/package.json
+++ b/sdk/eventhub/event-hubs/package.json
@@ -124,15 +124,15 @@
     "@azure/keyvault-secrets": "^4.8.0",
     "@azure/mock-hub": "workspace:*",
     "@rollup/plugin-inject": "^5.0.5",
-    "@types/chai-as-promised": "^7.1.8",
+    "@types/chai-as-promised": "catalog:",
     "@types/debug": "^4.1.4",
     "@types/node": "catalog:",
     "@types/ws": "^7.2.4",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
     "chai": "^5.1.1",
-    "chai-as-promised": "^8.0.0",
-    "chai-exclude": "^3.0.0",
+    "chai-as-promised": "catalog:",
+    "chai-exclude": "catalog:",
     "copyfiles": "^2.4.1",
     "cross-env": "catalog:legacy",
     "debug": "^4.1.1",
