--- a/sdk/batch/batch-rest/package.json
+++ b/sdk/batch/batch-rest/package.json
@@ -77,7 +77,6 @@
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "workspace:*",
-    "@microsoft/api-extractor": "catalog:",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
@@ -91,12 +90,13 @@
   },
   "scripts": {
     "audit": "skipped",
-    "build": "npm run clean && dev-tool run build-package && dev-tool run vendored mkdirp ./review && api-extractor run --local",
+    "build": "npm run clean && dev-tool run build-package && npm run extract-api",
     "build:samples": "echo skipped",
     "build:test": "npm run clean && dev-tool run build-package && dev-tool run build-test",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
     "clean": "dev-tool run vendored rimraf --glob dist dist-browser dist-esm dist-test temp types *.tgz *.log",
     "execute:samples": "echo skipped",
+    "extract-api": "dev-tool run vendored rimraf review && dev-tool run vendored mkdirp ./review && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
     "generate:client": "echo skipped",
     "integration-test:browser": "echo skipped",
