--- a/sdk/batch/batch/package.json
+++ b/sdk/batch/batch/package.json
@@ -30,15 +30,15 @@
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@types/chai": "catalog:legacy",
-    "@types/chai-as-promised": "^8.0.0",
+    "@types/chai-as-promised": "catalog:",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "@types/url-parse": "^1.4.3",
     "@types/uuid": "^10.0.0",
     "buffer": "^6.0.0",
     "nyc": "catalog:legacy",
-    "chai": "^5.1.1",
-    "chai-as-promised": "^8.0.0",
+    "chai": "catalog:",
+    "chai-as-promised": "catalog:",
     "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
@@ -46,7 +46,7 @@
     "karma-chrome-launcher": "catalog:legacy",
     "karma-coverage": "catalog:legacy",
     "karma-env-preprocessor": "catalog:legacy",
-    "karma-firefox-launcher": "^2.1.1",
+    "karma-firefox-launcher": "catalog:legacy",
     "karma-json-preprocessor": "catalog:legacy",
     "karma-json-to-file-reporter": "catalog:legacy",
     "karma-junit-reporter": "catalog:legacy",
@@ -55,12 +55,9 @@
     "mocha": "catalog:legacy",
     "moment": "^2.29.1",
     "puppeteer": "^23.6.0",
-    "rimraf": "catalog:",
     "rollup": "^4.24.0",
     "rollup-plugin-sourcemaps2": "^0.4.2",
-    "source-map-support": "^0.5.19",
     "ts-node": "catalog:legacy",
-    "ts-node-dev": "^1.1.8",
     "typescript": "catalog:",
     "uglify-js": "catalog:legacy",
     "uuid": "^10.0.0"
