--- a/sdk/containerregistry/container-registry/package.json
+++ b/sdk/containerregistry/container-registry/package.json
@@ -96,11 +96,11 @@
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "catalog:internal",
     "@types/chai": "catalog:legacy",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-as-promised": "catalog:legacy",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "chai": "catalog:legacy",
-    "chai-as-promised": "^7.1.1",
+    "chai-as-promised": "catalog:legacy",
     "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
