--- a/sdk/cosmosdb/cosmos/MultiRegionWriteSample/package.json
+++ b/sdk/cosmosdb/cosmos/MultiRegionWriteSample/package.json
@@ -9,13 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ora": "^3.0.0",
-    "uuid": "^3.3.2"
+    "ora": "^8.1.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
-    "@types/ora": "^1.3.4",
-    "@types/uuid": "^3.4.3",
-    "ts-node": "^7.0.1",
-    "typescript": "^3.0.1"
+    "@types/uuid": "^10.0.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.6.3"
   }
 }
