--- a/sdk/eventgrid/eventgrid-namespaces/package.json
+++ b/sdk/eventgrid/eventgrid-namespaces/package.json
@@ -91,13 +91,13 @@
     "@azure/identity": "catalog:internal",
     "@azure/service-bus": "workspace:*",
     "@types/chai": "catalog:legacy",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-as-promised": "catalog:legacy",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "@types/sinon": "catalog:legacy",
     "@types/uuid": "^8.0.0",
     "chai": "catalog:legacy",
-    "chai-as-promised": "^7.1.1",
+    "chai-as-promised": "catalog:legacy",
     "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
