--- a/sdk/eventhub/event-hubs/samples-express/package.json
+++ b/sdk/eventhub/event-hubs/samples-express/package.json
@@ -33,13 +33,13 @@
     "@azure/event-hubs": "^5.12.0",
     "@azure/abort-controller": "^2.1.2",
     "@azure/identity": "^4.4.1",
-    "express": "^4.19.2",
-    "uuid": "^8.3.1"
+    "express": "^4.21.1",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^18.0.0",
-    "rimraf": "catalog:",
+    "rimraf": "^5.0.5",
     "typescript": "^5.5.3"
   }
 }
