--- a/sdk/eventhub/eventhubs-checkpointstore-table/package.json
+++ b/sdk/eventhub/eventhubs-checkpointstore-table/package.json
@@ -83,15 +83,14 @@
     "@azure/dev-tool": "workspace:*",
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "workspace:*",
-    "@microsoft/api-extractor": "catalog:",
     "@rollup/plugin-inject": "^5.0.5",
-    "@types/chai-as-promised": "^7.1.8",
+    "@types/chai-as-promised": "catalog:",
     "@types/debug": "^4.1.4",
     "@types/node": "catalog:",
     "@vitest/browser": "catalog:",
     "@vitest/coverage-istanbul": "catalog:",
     "buffer": "^6.0.3",
-    "chai-as-promised": "^8.0.0",
+    "chai-as-promised": "catalog:",
     "cross-env": "catalog:legacy",
     "debug": "^4.1.1",
     "dotenv": "catalog:",
