--- a/sdk/identity/identity/integration/AzureFunctions/RunTest/package.json
+++ b/sdk/identity/identity/integration/AzureFunctions/RunTest/package.json
@@ -24,6 +24,6 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "typescript": "~5.6.2",
-    "rimraf": "catalog:"
+    "rimraf": "^5.0.5:"
   }
 }
