--- a/sdk/identity/identity/integration/AzureWebApps/package.json
+++ b/sdk/identity/identity/integration/AzureWebApps/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@azure/identity": "dev",
     "@azure/storage-blob": "^12.17.0",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
@@ -22,6 +22,6 @@
     "typescript": "~5.6.2",
     "@types/express": "^4.17.21",
     "dotenv": "16.4.4",
-    "rimraf": "catalog:"
+    "rimraf": "^5.0.5:"
   }
 }
