--- a/sdk/monitor/monitor-opentelemetry/package.json
+++ b/sdk/monitor/monitor-opentelemetry/package.json
@@ -68,16 +68,14 @@
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/functions": "^4.5.0",
     "@azure/functions-old": "npm:@azure/functions@3.5.1",
-    "@microsoft/api-extractor": "catalog:",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "@types/sinon": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
     "mocha": "catalog:legacy",
-    "nock": "^13.5.4",
+    "nock": "catalog:legacy",
     "nyc": "catalog:legacy",
-    "rimraf": "catalog:",
     "sinon": "catalog:legacy",
     "typescript": "catalog:"
   },
