--- a/sdk/monitor/monitor-query/package.json
+++ b/sdk/monitor/monitor-query/package.json
@@ -106,7 +106,6 @@
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "workspace:*",
     "@azure/monitor-opentelemetry-exporter": "workspace:*",
-    "@microsoft/api-extractor": "catalog:",
     "@opentelemetry/api": "catalog:otel",
     "@opentelemetry/sdk-trace-base": "catalog:otel",
     "@opentelemetry/sdk-trace-node": "catalog:otel",
@@ -115,7 +114,7 @@
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
     "chai": "catalog:legacy",
-    "chai-as-promised": "^7.1.1",
+    "chai-as-promised": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
     "karma": "catalog:legacy",
