--- a/sdk/remoterendering/mixed-reality-remote-rendering/package.json
+++ b/sdk/remoterendering/mixed-reality-remote-rendering/package.json
@@ -95,12 +95,12 @@
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@azure/identity": "catalog:internal",
     "@types/chai": "catalog:legacy",
-    "@types/chai-as-promised": "^7.1.0",
+    "@types/chai-as-promised": "catalog:legacy",
     "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
-    "@types/uuid": "^8.0.0",
+    "@types/uuid": "^10.0.0",
     "chai": "catalog:legacy",
-    "chai-as-promised": "^7.1.1",
+    "chai-as-promised": "catalog:legacy",
     "cross-env": "catalog:legacy",
     "dotenv": "catalog:",
     "eslint": "catalog:",
@@ -117,7 +117,7 @@
     "mocha": "catalog:legacy",
     "nyc": "catalog:legacy",
     "typescript": "catalog:",
-    "uuid": "^8.3.0"
+    "uuid": "^10.0.0"
   },
   "//sampleConfiguration": {
     "productName": "Azure Remote Rendering",
