--- a/sdk/template/template-dpg/package.json
+++ b/sdk/template/template-dpg/package.json
@@ -104,7 +104,7 @@
     "karma-sourcemap-loader": "catalog:legacy",
     "mocha": "catalog:legacy",
     "nyc": "catalog:legacy",
-    "puppeteer": "^23.0.2",
+    "puppeteer": "catalog:legacy",
     "typescript": "catalog:"
   },
   "dependencies": {
