disable the protection to only enable on pr. I want to test this crap and no matter what I do AZDO is refusing to queue the build

--- a/eng/common/pipelines/templates/steps/save-package-properties.yml
+++ b/eng/common/pipelines/templates/steps/save-package-properties.yml
@@ -22,7 +22,7 @@ steps:
 
   # The other public CI builds will pass a real service directory, which will not activate the PR diff logic and as such will operate
   # as before this change.
-  - ${{ if and(eq(variables['Build.Reason'], 'PullRequest'), eq(parameters.ServiceDirectory, 'auto')) }}:
+  - ${{ if eq(parameters.ServiceDirectory, 'auto') }}:
       - task: Powershell@2
         displayName: Generate PR Diff
         inputs:
