[EngSys] Add legacy packages  ***NO_CI***

--- a/turbo.json
+++ b/turbo.json
@@ -3,7 +3,8 @@
   "ui": "tui",
   "tasks": {
     "build": {
-      "dependsOn": ["^build"]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", "dist-esm/**"]
     },
     "test": {
       "dependsOn": ["^build"]
