--- a/sdk/instrumentation/opentelemetry-instrumentation-azure-sdk/package.json
+++ b/sdk/instrumentation/opentelemetry-instrumentation-azure-sdk/package.json
@@ -89,26 +89,14 @@
     "@azure/eslint-plugin-azure-sdk": "workspace:*",
     "@opentelemetry/sdk-trace-base": "catalog:otel",
     "@opentelemetry/sdk-trace-node": "catalog:otel",
-    "@types/chai": "catalog:legacy",
-    "@types/mocha": "catalog:legacy",
     "@types/node": "catalog:",
-    "@types/sinon": "catalog:legacy",
-    "chai": "catalog:legacy",
-    "cross-env": "catalog:legacy",
+    "@vitest/browser": "catalog:",
+    "@vitest/coverage-istanbul": "catalog:",
     "dotenv": "catalog:",
     "eslint": "catalog:",
-    "karma": "catalog:legacy",
-    "karma-chrome-launcher": "catalog:legacy",
-    "karma-coverage": "catalog:legacy",
-    "karma-env-preprocessor": "catalog:legacy",
-    "karma-firefox-launcher": "catalog:legacy",
-    "karma-junit-reporter": "catalog:legacy",
-    "karma-mocha": "catalog:legacy",
-    "karma-mocha-reporter": "catalog:legacy",
-    "mocha": "catalog:legacy",
-    "nyc": "catalog:legacy",
-    "sinon": "catalog:legacy",
-    "typescript": "catalog:"
+    "playwright": "catalog:",
+    "typescript": "catalog:",
+    "vitest": "catalog:"
   },
   "engines": {
     "node": ">=18.0.0"
